# SmartButlerForRaspberry

./: CMakeLists.txt  README.md  SmartButlerForRaspberry.desktop  build.py  main.c
include/: CpuTemp.hpp  CpuUsage.hpp  InfoBase.hpp  IpInfo.hpp  RamInfo.hpp
main/: main.cpp
modules/: CMakeLists.txt  wiringPiConfig.cmake
modules/getInformation/: CMakeLists.txt
modules/getInformation/include/: getInformation.h
modules/getInformation/src/: getInformation.c
modules/oledLib/: CMakeLists.txt
modules/oledLib/include/: font.h  oled.h
modules/oledLib/src/: oled.c
oled_inc/: Oled.hpp  font.hpp
oled_src/: Oled.cpp
src/: CpuTemp.cpp  CpuUsage.cpp  IpInfo.cpp  RamInfo.cpp
